# ctrs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  delete_dupes.py  dupes.py  foo.txt  run.py  slurp.py  slurp.sh  slurp_doc.py  slurp_docs.py  stab-depinfo.d  stab.py  undoc.py  undoc_dir.py
src/ctrs-rt/: Cargo.toml  c.rs  lib.rs
test/0.11.0/doc/: doc_guide-ffi_md_0010.rs  doc_guide-lifetimes_md_0000.rs  doc_guide-lifetimes_md_0004.rs  doc_guide-lifetimes_md_0015.rs  doc_guide-lifetimes_md_0016.rs  doc_guide-lifetimes_md_0019.rs  doc_guide-lifetimes_md_0023.rs  doc_guide-lifetimes_md_0024.rs  doc_guide-pointers_md_0000.rs  doc_guide-pointers_md_0005.rs  doc_guide-pointers_md_0013.rs  doc_guide-pointers_md_0014.rs  doc_guide-pointers_md_0025.rs  doc_guide-pointers_md_0034.rs  doc_guide-pointers_md_0039.rs  doc_guide-strings_md_0000.rs  doc_guide-tasks_md_0001.rs  doc_guide-tasks_md_0003.rs  doc_guide_md_0018.rs  doc_guide_md_0027.rs  doc_guide_md_0034.rs  doc_guide_md_0041.rs  doc_guide_md_0042.rs  doc_guide_md_0044.rs  doc_guide_md_0052.rs  doc_guide_md_0055.rs  doc_guide_md_0057.rs  doc_guide_md_0058.rs  doc_guide_md_0059.rs  doc_guide_md_0065.rs  doc_guide_md_0066.rs  doc_guide_md_0067.rs  doc_guide_md_0068.rs  doc_guide_md_0069.rs  doc_guide_md_0072.rs  doc_guide_md_0073.rs  doc_guide_md_0077.rs  doc_rust_md_0009.rs  doc_rust_md_0011.rs  doc_rust_md_0012.rs  (+74 more)
test/0.11.0/run-pass/: nested-patterns.rs  struct-pattern-matching.rs
test/1.0.0-alpha/doc-collections/: libcollections_binary_heap_rs_0001.rs  libcollections_binary_heap_rs_0002.rs  libcollections_binary_heap_rs_0006.rs  (+123 more)
(+2711 files in other folders)
