[package]
name = "ctrs"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
build = "build.rs"

# This is needed for the build script, 'build.rs'
[build-dependencies.ctrs-gen]
path = "src/ctrs-gen"

# This is needed for the tests created by the buildscript
[dev-dependencies.ctrs-gen]
path = "src/ctrs-gen"
