[package]
name = "ctrs"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
description = "Conformance Tests for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/brson/ctrs"
build = "build.rs"

# This is needed for the build script, 'build.rs'
[build-dependencies.ctrs-rt]
path = "src/ctrs-rt"

# This is needed for the tests created by the buildscript
[dev-dependencies.ctrs-rt]
path = "src/ctrs-rt"
