[package]
name = "ctrs-rt"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
description = "The CTRS test generator and test runner"
license = "MIT/Apache-2.0"
repository = "https://github.com/brson/ctrs"

[lib]
name = "ctrs_rt"
path = "lib.rs"

[dependencies]
semver = "0.1.20"
env_logger = "0.3.1"
log = "0.3.1"
rustc-serialize = "0.3.16"